--- a/antipode_site/mystyle.css
+++ b/antipode_site/mystyle.css
@@ -1,12 +1,3 @@
-.flex-container {
-  display: flex;
-  flex-direction: column;
-  height: 300px;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
 .button {
   background-color: #4CAF50; /* Green */
   border: none;
@@ -14,9 +5,9 @@
   padding: 20px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
+  display: block;
   font-size: 16px;
-  margin: 4px 2px;
+  margin: 20px auto;
   cursor: pointer;
   border-radius: 12px;
 }
@@ -29,4 +20,11 @@
 body {
   background-color: DodgerBlue;
   margin: 0;
+}
+
+#map {
+  height:500px;
+  width: 70%;
+  margin: auto;
+  padding: 10px;
 }
